# skai

./: .ccopts  .gitignore  CMakeLists.txt  README  af_skip.cpp  arrayfire.sk  main.sk  skip.project.json  test.sk  variable.sk
arrayfire/: af_skip.cpp  arrayfire.sk
autograd/: variable.sk
backends/llvm/: .ccopts  backend.cpp  llvm_lower_test.sk  lower_llvm.sk  skip.project.json
codegen/: ast.sk  evaluator.sk  generator.sk
dasil/: ast.sk  astPp.sk  error.sk  fileInfo.sk  generator.sk  genericLexer.sk  lexer.sk  main.sk  message.sk  parser.sk  reactiveTable.sk  tensorlang.md
experiment/: loss.sk  mlp.sk  model.sk  optimizer.sk  rnn.sk  test_model.sk  trainer.sk
tensor/: tensor.sk  test.sk
